# ros2_move_robot

./: LICENSE  README.md
ros2_draw_squares/: CMakeLists.txt  package.xml
ros2_draw_squares/include/ros2_draw_squares/: move_robot.hpp
ros2_draw_squares/launch/: call_move_robot_in_square_service_server.launch.py  move_robot_in_square_service_server.launch.py
ros2_draw_squares/src/: move_robot.cpp  move_robot_in_square_service_client.cpp  move_robot_in_square_service_server.cpp  move_robot_node.cpp
ros2_draw_squares_custom_msgs/: CMakeLists.txt  package.xml
ros2_draw_squares_custom_msgs/srv/: SquareServiceMessage.srv
